bitfields/tests/compile_error_cases/errors/array_fields/array_field_integer_backed_too_few_bits.rs
use bitfields::bitfield;

/// Array field bits are fewer than the integer-backed bitfield size.
#[bitfield(u32)]
pub struct Bitfield {
    a: [u8; 2],
}

fn main() {}

